# VH2015

./: .cproject  .project  CMakeLists.txt  Docu.tex  LISTA DE TODOS  MemoryVisor.py  README.md  Socket.cpp  Socket.h  VH2015.cbp  VH2015.depend  main.cpp  proof.cpp  proof.h  vHeap.xml
LaTex/: VH2015.tex
LaTex/preDocs/: Análisis.txt  Dump.txt  ProblemasEncontrados.txt  XMLReader.txt  socket.txt  vBinaryTree.txt  vChar.txt  vEntry.txt  vFloat.txt  vGC.txt  vHeap.txt  vHeapOptions.txt  vInt.txt  vList.txt  vLong.txt  vMetaData.txt  vPager+vDefragmenter.txt  vRef.txt  vSimpleList.txt  vSimpleNode.txt  vString.txt  xml.txt
Memory Visor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytcpsocket.cpp  mytcpsocket.h  visor.pro  visor.pro.user.d4f6fec
headers/: vObject.h
libs/: pugixml.cpp  vheaplib.cpp  vheaplib.h  vheaplibpp.cpp  vheaplibpp.h
libs/rapidjson/: filestream.h  writer.h
res/: book.txt  vHeap.xml
src/: Constants.cpp  Constants.h  TODO.txt  TestApplication.cpp  TestApplication.h
src/Iterator/: Iterator.h
src/Socket/: Socket.h
src/Socket/Headers/: Recomendaciones.txt  Socket.h
src/Test/: proof.cpp  proof.h
src/Test/Headers/: Ship.h  TestApplication.h  proof.h
src/Test/Source/: TestApplication.cpp  proof.cpp
src/Tree/: Container.cpp  Container.h  Leaf.cpp  Leaf.h  Tree.h
src/XML/: pugixml.cpp  pugixml.hpp  vHeapOptions.cpp  vHeapOptions.h  xmlReader.cpp  xmlReader.h  xmlWriter.cpp  xmlWriter.h
src/dataStructures/: List.cpp  List.h  Node.cpp  Node.h  dataStructures.cpp  dataStructures.h
src/vHeap/Headers/: Dump.h  Tree.h  bTree.h  vCleaner.h  vDefragmenter.h  vEntry.h  vGarbageCollector.h  vHeap.h  vMallocMDEntry.h  vMallocMetaData.h  vMetaData.h  vPager.h  vRef.h
src/vHeap/Source/: Dump.cpp  vCleaner.cpp  vDefragmenter.cpp  vEntry.cpp  vGarbageCollector.cpp  vHeap.cpp  vMallocMDEntry.cpp  vMallocMetaData.cpp  vMetaData.cpp  vObject.cpp  vPager.cpp  vRef.cpp
src/vTypes/: List.h  vChar.cpp  vChar.h  vFloat.cpp  vFloat.h  vInt.cpp  vInt.h  vList.cpp  vList.h  vLong.cpp  vLong.h  vSimpleList.cpp  vSimpleList.h  vSimpleNode.cpp  vSimpleNode.h  vString.cpp  vString.h
src/vTypes/Headers/: vArray.h  vBinaryTree.h  vChar.h  vDoubleList.h  vFloat.h  vInt.h  vList.h  vLong.h  vNumber.h  vObject.h  vSimpleList.h  vString.h
src/vTypes/Source/: vChar.cpp  vFloat.cpp  vInt.cpp  vList.cpp  vLong.cpp  vObject.cpp  vSimpleList.cpp  vSimpleNode.cpp  vString.cpp
src/vheap/: List.h  Metadata.h  list.cpp  list.h  node.cpp  node.h  vGarbageCollector.cpp  vGarbageCollector.h  vHeap 2.cpp  vHeap 2.h  vHeap.cpp  vHeap.h  vMallocMetaData.cpp  vMallocMetaData.h  vObject.cpp  vObject.h  vObjectType.h  vRef 2.h  vRef.cpp  vRef.h
src/vheap/Headers/: vHeap.h  vMallocMetaData.h  vRef.h
src/vheap/Source/: vGarbageCollector.cpp  vRef.cpp
timesheet/: alex.txt  alex_bitacora.txt  ernesto.txt  ernesto_bitacora.txt  pablo.txt  pablo_bitacora.txt  roberto.txt
